tests/ui/const-generics/mgca/type_const-inherent-const-omitted-type.stderr
error[E0658]: omitting type on const item declaration is experimental
  --> $DIR/type_const-inherent-const-omitted-type.rs:8:12
   |
LL |     const B = 4;
   |            ^
   |
   = note: see issue #149226 <https://github.com/rust-lang/rust/issues/149226> for more information
   = help: add `#![feature(const_items_unit_type_default)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = help: consider specifying the type explicitly

error[E0308]: mismatched types
  --> $DIR/type_const-inherent-const-omitted-type.rs:8:15
   |
LL |     const B = 4;
   |               ^ expected `()`, found integer

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0658.
For more information about an error, try `rustc --explain E0308`.
